--- a/styles.css
+++ b/styles.css
@@ -117,9 +117,41 @@ div.bottom_previous div.bottom_next {
 .inner_card{
     cursor: pointer;
 }
-button#id_bottom_complete.bottom_complete {
-    margin: 0 auto;
-    display: block !important;
+.bottom_complete {
+    color: black !important;
+    background-color: #b8c1ca !important;
+    border: 1px solid !important;
+    border-radius: 4px !important;
+    margin: auto;
+    max-width: 20%;
+    padding: 8px !important;
+    display: flex !important;
+    justify-content: center !important;
+    font-size: 17px !important;
+    cursor: pointer;
+}
+.complete_section:before {
+    content: "";
+    display: block;
+    background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="green" class="bi bi-check" viewBox="0 0 16 16"> <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>  </svg>') no-repeat;
+    float: left;
+    width: 30px;
+    top: 0;
+    margin: -4px 5px 0 0;
+    cursor: none;
+}
+.complete_section {
+    cursor: none !important;
+    color: black !important;
+    background-color: #b8c1ca !important;
+    border: 1px solid !important;
+    border-radius: 4px !important;
+    margin: auto;
+    max-width: 20%;
+    padding: 8px !important;
+    display: flex !important;
+    justify-content: center !important;
+    font-size: 17px !important;
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
